[gd_scene load_steps=6 format=3 uid="uid://c2hdcuiwp76kp"]

[ext_resource type="Script" uid="uid://k4ibcx5xylnl" path="res://menu-principal/scripts/menu_principal.gd" id="1_ns3he"]
[ext_resource type="FontFile" uid="uid://bmxy13tbq04nx" path="res://Assets/fuentes/Daydream.ttf" id="2_k4fqk"]
[ext_resource type="Texture2D" uid="uid://1rq5omb7fhw8" path="res://fondo.jpeg" id="2_so08t"]
[ext_resource type="StyleBox" uid="uid://djwb6658abppd" path="res://menu-principal/escenas/estilo_boton_mprinci.tres" id="3_k4fqk"]
[ext_resource type="StyleBox" uid="uid://db04076wbxvtl" path="res://menu-principal/escenas/estilo_boton_press.tres" id="3_pj2cc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -277.0
offset_right = -12.0
offset_bottom = -277.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ns3he")

[node name="FondoInicio" type="Sprite2D" parent="."]
position = Vector2(18, 2)
scale = Vector2(0.925026, 0.781638)
texture = ExtResource("2_so08t")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -147.0
offset_top = -306.0
offset_right = 152.0
offset_bottom = -247.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("2_k4fqk")
theme_override_font_sizes/font_size = 38
text = "JUEGO DIVERTIDO
"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -222.5
offset_right = 106.5
offset_bottom = 222.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="jugar" type="Button" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.0852526, 8.32113e-05, 0.0429812, 1)
theme_override_colors/font_hover_pressed_color = Color(0.843137, 0.0431373, 0.843137, 1)
theme_override_colors/font_hover_color = Color(0.156863, 0.521569, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("2_k4fqk")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = ExtResource("3_pj2cc")
theme_override_styles/pressed = ExtResource("3_k4fqk")
theme_override_styles/normal = ExtResource("3_k4fqk")
text = "JUGAR"

[node name="configuracion" type="Button" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.0852526, 8.32113e-05, 0.0429812, 1)
theme_override_colors/font_hover_pressed_color = Color(0.843137, 0.0431373, 0.843137, 1)
theme_override_colors/font_hover_color = Color(0.156863, 0.521569, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_k4fqk")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = ExtResource("3_pj2cc")
theme_override_styles/normal = ExtResource("3_k4fqk")
text = "CONFIGURACION"

[node name="instrucciones" type="Button" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.0852526, 8.32113e-05, 0.0429812, 1)
theme_override_colors/font_hover_pressed_color = Color(0.843137, 0.0431373, 0.843137, 1)
theme_override_colors/font_hover_color = Color(0.156863, 0.521569, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_k4fqk")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = ExtResource("3_pj2cc")
theme_override_styles/normal = ExtResource("3_k4fqk")
text = "INSTRUCCIONES"

[node name="creditos" type="Button" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.0852526, 8.32113e-05, 0.0429812, 1)
theme_override_colors/font_hover_pressed_color = Color(0.843137, 0.0431373, 0.843137, 1)
theme_override_colors/font_hover_color = Color(0.156863, 0.521569, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_k4fqk")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = ExtResource("3_pj2cc")
theme_override_styles/normal = ExtResource("3_k4fqk")
text = "CREDITOS"

[node name="salir" type="Button" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.0852526, 8.32113e-05, 0.0429812, 1)
theme_override_colors/font_hover_pressed_color = Color(0.843137, 0.0431373, 0.843137, 1)
theme_override_colors/font_hover_color = Color(0.156863, 0.521569, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_k4fqk")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = ExtResource("3_pj2cc")
theme_override_styles/normal = ExtResource("3_k4fqk")
action_mode = 0
text = "SALIR"

[connection signal="pressed" from="CenterContainer/VBoxContainer/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/configuracion" to="." method="_on_configuracion_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/instrucciones" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/salir" to="." method="_on_salir_pressed"]
